Add ProductPart and fix the site setup.

--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionPart.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/SubscriptionPart.cshtml
@@ -1,23 +1,24 @@
 @using CrestApps.OrchardCore.Subscriptions
 @using CrestApps.OrchardCore.Subscriptions.Core.Models
+@using CrestApps.OrchardCore.Subscriptions.ViewModels
 @using Microsoft.AspNetCore.Mvc.Localization
 @using CrestApps.OrchardCore.Subscriptions.Extensions;
 
-@model ShapeViewModel<SubscriptionPart>
+@model DisplaySubscriptionViewModel
 
 <div class="row">
-    @if (Model.Value.InitialAmount.HasValue)
+    @if (Model.InitialAmount.HasValue)
     {
-        <div class="col-6">@Model.Value.InitialAmountDescription</div>
-        <div class="col-6">@Model.Value.InitialAmount.Value.ToString("C")</div>
+        <div class="col-6">@Model.InitialAmountDescription</div>
+        <div class="col-6">@Model.InitialAmount.Value.ToString("C")</div>
     }
 
     <div class="col-6">@T["Billing Amount"]</div>
-    <div class="col-6">@T.GetAmount(Model.Value.DurationType, Model.Value.BillingDuration, Model.Value.BillingAmount)</div>
+    <div class="col-6">@T.GetAmount(Model.DurationType, Model.BillingDuration, Model.Price)</div>
 
-    @if (Model.Value.BillingCycleLimit.HasValue)
+    @if (Model.BillingCycleLimit.HasValue)
     {
         <div class="col-6">@T["Total payments"]</div>
-        <div class="col-6">@Model.Value.BillingCycleLimit.Value</div>
+        <div class="col-6">@Model.BillingCycleLimit.Value</div>
     }
 </div>
