--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/Subscriptions/Index.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/Subscriptions/Index.cshtml
@@ -1,3 +1,4 @@
+@using CrestApps.OrchardCore.Subscriptions.Services
 @using CrestApps.OrchardCore.Subscriptions.ViewModels
 @using OrchardCore.ContentManagement.Display
 
