TODO: 1. Figure out why the subscription no longer finishes after the payment is made. 2. We'll probably need to add payments collection to SubscriptionMetadata so that we can track all the payments in one object and the use that object to populate SubscriptionTransactionIndex index.

--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/Subscriptions/Signup.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/Subscriptions/Signup.cshtml
@@ -3,9 +3,10 @@
 
 @model SubscriptionViewModel
 
-<form id="subscription-form" method="post" asp-route-contentItemId="@Model.ContentItemId" asp-route-sessionId="@Model.SessionId">
+<form id="subscription-form" method="post" asp-route-sessionId="@Model.SessionId">
 
     <input type="hidden" name="step" value="@Model.Step" />
+    <input type="hidden" name="contentItemId" value="@Model.ContentItemId" />
 
     @await DisplayAsync(Model.Content)
 </form>
