adding initial UI

--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/ServicePlans/Index.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/ServicePlans/Index.cshtml
@@ -9,17 +9,17 @@
 @if (Model.ServicePlans == null || Model.ServicePlans.Count == 0)
 {
     <div class="alert alert-info text-center" role="alert">
-        @T["There are no subscriptions at the moment."]
+        @T["There are no service plans at the moment."]
     </div>
 
     return;
 }
 
 <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xxl-4 g-3">
-    @foreach (var subscription in Model.ServicePlans)
+    @foreach (var servicePlan in Model.ServicePlans)
     {
         <div class="col">
-            @await DisplayAsync(subscription)
+            @await DisplayAsync(servicePlan)
         </div>
     }
 </div>
