--- a/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/Subscriptions/Signup.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.Subscriptions/Views/Subscriptions/Signup.cshtml
@@ -1,7 +1,7 @@
 @using CrestApps.OrchardCore.Subscriptions.ViewModels
 @using OrchardCore.DisplayManagement
 
-@model SubscriptionViewModel
+@model ServicePlanSubscriptionViewModel
 
 <form id="subscription-form" method="post" asp-action="Signup" asp-route-contentItemId="@Model.ContentItemId">
 
