--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/AIChatProfile.Link.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/AIChatProfile.Link.cshtml
@@ -2,21 +2,22 @@
 @using CrestApps.OrchardCore.OpenAI
 
 @{
-    var service = ViewContext.HttpContext.RequestServices.GetKeyedService<IAIChatProfileSource>(Model.Source as string);
+    string source = Model.Source;
+    var service = ViewContext.HttpContext.RequestServices.GetKeyedService<IAIChatProfileSource>(source);
 }
 
 <div class="col">
     <div class="card h-100">
         <div class="card-body">
-            <h4>@(service?.DisplayName ?? Model.Source)</h4>
+            <h4>@(service?.DisplayName ?? source)</h4>
             <p class="hint">@(service?.Description)</p>
         </div>
         <div class="card-footer text-muted text-sm-end">
             <a class="btn btn-primary btn-sm"
                asp-route-action="Create"
                asp-route-controller="Admin"
-               asp-route-id="@Model.Name"
-               asp-area="OrchardCore.UrlRewriting">@T["Add"]</a>
+               asp-route-id="@source"
+               asp-area="CrestApps.OrchardCore.OpenAI">@T["Add"]</a>
         </div>
     </div>
 </div>
