--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/AIChatProfile.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/AIChatProfile.Edit.cshtml
@@ -1,12 +1,1 @@
-@using CrestApps.OrchardCore.OpenAI.ViewModels
-@using OrchardCore
-
-@model EditAIChatProfileViewModel
-
-<div class="@Orchard.GetWrapperClasses()">
-    <label asp-for="Title" class="@Orchard.GetLabelClasses()">@T["Display Name"]</label>
-    <div class="@Orchard.GetEndClasses()">
-        <input asp-for="Title" class="form-control" />
-        <span asp-validation-for="Title" class="text-danger"></span>
-    </div>
-</div>
+@await DisplayAsync(Model.Content)
