--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/AIChatProfile.Link.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/AIChatProfile.Link.cshtml
@@ -15,7 +15,7 @@
         <div class="card-footer text-muted text-sm-end">
             <a class="btn btn-primary btn-sm"
                asp-route-action="Create"
-               asp-route-controller="Admin"
+               asp-route-controller="Profiles"
                asp-route-id="@source"
                asp-area="CrestApps.OrchardCore.OpenAI">@T["Add"]</a>
         </div>
