--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/Profiles/Create.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/Profiles/Create.cshtml
@@ -13,6 +13,6 @@
     <a class="btn btn-secondary cancel"
        role="button"
        asp-route-action="Index"
-       asp-route-controller="Admin"
+       asp-route-controller="Profiles"
        asp-route-area="CrestApps.OrchardCore.OpenAI.Azure">@T["Cancel"]</a>
 </form>
