--- a/src/Modules/CrestApps.OrchardCore.OpenAI.Azure/Views/AzureAIChatProfile.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI.Azure/Views/AzureAIChatProfile.Edit.cshtml
@@ -13,10 +13,10 @@
 </div>
 
 <div class="@Orchard.GetWrapperClasses()">
-    <label asp-for="TokenLength" class="@Orchard.GetLabelClasses()">@T["Token length"]</label>
+    <label asp-for="MaxTokens" class="@Orchard.GetLabelClasses()">@T["Max response"]</label>
     <div class="@Orchard.GetEndClasses()">
-        <input type="number" class="form-control" asp-for="TokenLength" step="4" min="4" max="2048">
-        <span class="hint">@T["This parameter is used to control the length of the generated predictions. A higher value will result in longer response. Leave it blank to use the current default of {0}.", AzureOpenAIConstants.DefaultTokenLength]</span>
+        <input type="number" class="form-control" asp-for="MaxTokens" step="4" min="4" max="2048">
+        <span class="hint">@T["Set a limit on the number of tokens per model response. The supported number of tokens are shared between the prompt (including system message, examples, message history, and user query) and the model's response. One token is roughly 4 characters for typical English text. Leave it blank to use the current default of {0}.", AzureOpenAIConstants.DefaultMaxTokens]</span>
     </div>
 </div>
 
@@ -24,7 +24,7 @@
     <label asp-for="Temperature" class="@Orchard.GetLabelClasses()">@T["Temperature"]</label>
     <div class="@Orchard.GetEndClasses()">
         <input type="number" class="form-control" asp-for="Temperature" step="0.01" min="0" max="1">
-        <span class="hint">@T["This parameter is used to regulate the level of randomness in predictions. A higher value will result in a more unpredictable response. Leave it blank to use the current default of {0}.", AzureOpenAIConstants.DefaultTemperature]</span>
+        <span class="hint">@T["Controls randomness. Lowering the temperature means that the model will produce more repetitive and deterministic responses. Increasing the temperature will result in more unexpected or creative responses. Try adjusting temperature or Top P but not both.. Leave it blank to use the current default of {0}.", AzureOpenAIConstants.DefaultTemperature]</span>
     </div>
 </div>
 
@@ -32,7 +32,7 @@
     <label asp-for="TopP" class="@Orchard.GetLabelClasses()">@T["Top P"]</label>
     <div class="@Orchard.GetEndClasses()">
         <input type="number" class="form-control" asp-for="TopP" step="0.01" min="0" max="1">
-        <span class="hint">@T["Controls the diversity of generated text: lower values produce more focused output, while higher values increase variety. Leave it blank to use the current default of {0}.", AzureOpenAIConstants.DefaultTopP]</span>
+        <span class="hint">@T["Similar to temperature, this controls randomness but uses a different method. Lowering Top P will narrow the model’s token selection to likelier tokens. Increasing Top P will let the model choose from tokens with both high and low likelihood. Try adjusting temperature or Top P but not both.. Leave it blank to use the current default of {0}.", AzureOpenAIConstants.DefaultTopP]</span>
     </div>
 </div>
 
@@ -40,7 +40,7 @@
     <label asp-for="FrequencyPenalty" class="@Orchard.GetLabelClasses()">@T["Frequency penalty"]</label>
     <div class="@Orchard.GetEndClasses()">
         <input type="number" class="form-control" asp-for="FrequencyPenalty " step="0.01" min="0" max="1">
-        <span class="hint">@T["The likelihood of repeating tokens in the generated text. A higher value reduces repetition by penalizing frequent tokens, while a lower value allows more repetition. Leave it blank to use the current default of {0}.", AzureOpenAIConstants.DefaultFrequencyPenalty]</span>
+        <span class="hint">@T["Reduce the chance of repeating a token proportionally based on how often it has appeared in the text so far. This decreases the likelihood of repeating the exact same text in a response. Leave it blank to use the current default of {0}.", AzureOpenAIConstants.DefaultFrequencyPenalty]</span>
     </div>
 </div>
 
@@ -48,7 +48,7 @@
     <label asp-for="PresencePenalty" class="@Orchard.GetLabelClasses()">@T["Presence penalty"]</label>
     <div class="@Orchard.GetEndClasses()">
         <input type="number" class="form-control" asp-for="PresencePenalty" step="0.01" min="0" max="1">
-        <span class="hint">@T["Discourages the inclusion of tokens that have already appeared in the text. A higher value reduces the likelihood of repeating previously mentioned concepts, while a lower value allows more repetition. Leave it blank to use the current default of {0}.", AzureOpenAIConstants.DefaultPresencePenalty]</span>
+        <span class="hint">@T["Reduce the chance of repeating any token that has appeared in the text at all so far. This increases the likelihood of introducing new topics in a response. Leave it blank to use the current default of {0}.", AzureOpenAIConstants.DefaultPresencePenalty]</span>
     </div>
 </div>
 
@@ -59,4 +59,3 @@
         <span class="hint">@T["Select the number of past messages to include in each new API request. This helps give the model context for new user queries. Setting this number to 10 will include 5 user queries and 5 system responses. Leave it blank to use the current default of {0}.", AzureOpenAIConstants.DefaultPastMessagesCount]</span>
     </div>
 </div>
-
