Clean up javascript and add ChatGPT feature

--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/AIChatProfile.Link.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/AIChatProfile.Link.cshtml
@@ -16,9 +16,8 @@
         <div class="card-footer text-muted text-sm-end">
             <a class="btn btn-primary btn-sm"
                asp-route-action="Create"
-               asp-route-controller="Profiles"
-               asp-route-id="@source"
-               asp-area="@OpenAIConstants.Feature.Area">@T["Add"]</a>
+               asp-route-controller="ChatProfiles"
+               asp-route-id="@source">@T["Add"]</a>
         </div>
     </div>
 </div>
