--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/Deployments/Create.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/Deployments/Create.cshtml
@@ -15,6 +15,5 @@
     <a class="btn btn-secondary cancel"
        role="button"
        asp-route-action="Index"
-       asp-route-controller="Deployments"
-       asp-route-area="CrestApps.OrchardCore.OpenAI.Azure">@T["Cancel"]</a>
+       asp-route-controller="Deployments">@T["Cancel"]</a>
 </form>
