--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/AIChatListOptions.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/AIChatListOptions.Edit.cshtml
@@ -1,4 +1,4 @@
 @using CrestApps.OrchardCore.OpenAI.Core
-<form method="post" asp-action="History" asp-controller="Admin" asp-route-profileId="@ViewContext.HttpContext.Request.RouteValues["profileId"]" asp-route-area="@OpenAIConstants.Feature.Area">
+<form method="post" asp-action="History" asp-controller="AdminChat" asp-route-profileId="@ViewContext.HttpContext.Request.RouteValues["profileId"]" asp-route-area="@OpenAIConstants.Feature.ChatGPT">
     @await DisplayAsync(Model.Content)
 </form>
