--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/AIChatProfile.Buttons.SummaryAdmin.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/AIChatProfile.Buttons.SummaryAdmin.cshtml
@@ -1,15 +1,16 @@
+@using CrestApps.OrchardCore.OpenAI.Core
 @using CrestApps.OrchardCore.OpenAI.Models
 @using OrchardCore.DisplayManagement.Views
 
 @model ShapeViewModel<AIChatProfile>
 
 <a asp-action="Edit"
-   asp-controller="Profiles"
+   asp-controller="ChatProfiles"
    asp-route-id="@Model.Value.Id"
    class="btn btn-primary btn-sm">@T["Edit"]</a>
 
 <a asp-action="Delete"
-   asp-controller="Profiles"
+   asp-controller="ChatProfiles"
    asp-route-id="@Model.Value.Id"
    class="btn btn-danger btn-sm"
    data-url-af="RemoveUrl UnsafeUrl">@T["Delete"]</a>
