--- a/src/Modules/CrestApps.OrchardCore.OpenAI/Views/AIChatProfileName.Edit.cshtml
+++ b/src/Modules/CrestApps.OrchardCore.OpenAI/Views/AIChatProfileName.Edit.cshtml
@@ -47,3 +47,19 @@
         <span class="hint">@T["The welcome message to show on the UI when a new session is created."]</span>
     </div>
 </div>
+
+@if (Model.Functions != null && Model.Functions.Length > 0)
+{
+    <h6>@T["Available Functions"]</h6>
+    <div class="mb-3">
+        @for (var i = 0; i < Model.Functions.Length; i++)
+        {
+            <div class="form-check">
+                <input asp-for="Functions[i].IsSelected" type="checkbox" class="form-check-input">
+                <input type="hidden" asp-for="Functions[i].Name" />
+                <label class="form-check-label" asp-for="Functions[i].IsSelected">@Model.Functions[i].Name</label>
+                <small class="form-text text-muted">@Model.Functions[i].Description</small>
+            </div>
+        }
+    </div>
+}
